--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
 
 <body>
 <!-- navbar -->
-    <div class="thewholenav  container-fluid fixed-top">
+    <div class="thewholenav nnnnnnnnnne container-fluid fixed-top">
         <div class=" row  justify-content-center align-items-center">
           <div class="col-4 text-start ">
             <div class="col  ">
-                <img class="img" src="/bootstraptutorial/4.png" alt="">
+                <img class="img" src="4.png" alt="">
               </div>
           </div>
           <div class="col ">
@@ -72,7 +72,7 @@
                         <div class="offcanvas-header">
                           <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">
                             <div class="col">
-                                <img class="img" src="/bootstraptutorial/4.png" alt="">
+                                <img class="img" src="4.png" alt="">
                               </div>
                           </h5>
                           <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
@@ -121,8 +121,8 @@
 </div>
 <!-- showcase -->
 <div>
-  <img src="/bootstraptutorial/backgroundhome.png" class="card-img d-none d-lg-block " alt="...">
-  <img src="/bootstraptutorial/ipad.png" class="card-img  d-md-block d-lg-none" alt="">
+  <img src="backgroundhome.png" class="card-img d-none d-lg-block " alt="...">
+  <img src="ipad.png" class="card-img  d-md-block d-lg-none" alt="">
   <div class="below_navbar_text p-5 card-img-overlay container-fluid ">
     <div class="row justify-content-center  justify-content-lg-end">
         <div class="col-8 col-sm-7 col-md-8  col-lg-7 text-center text-lg-end">
@@ -160,7 +160,7 @@
 
 
       <div class="col-4">
-        <img src="/bootstraptutorial/4.png" class="image_icon_1 img-fluid rounded-start" alt="...">
+        <img src="4.png" class="image_icon_1 img-fluid rounded-start" alt="...">
       </div>
 
 
@@ -179,7 +179,7 @@
         </div>
 
         <div class="col-4">
-          <img src="/bootstraptutorial/4.png" class="img-fluid rounded-start" alt="...">
+          <img src="4.png" class="img-fluid rounded-start" alt="...">
         </div>
 
       </div>
@@ -199,7 +199,7 @@
         </div>
         
         <div class="col-4">
-          <img src="/bootstraptutorial/4.png" class="img-fluid rounded-start" alt="...">
+          <img src="4.png" class="img-fluid rounded-start" alt="...">
         </div>
 
     </div>
@@ -229,8 +229,8 @@
   </div>
 </div>
 <!-- background_body_boxes_and_btn -->
-<img class="img_background_body d-none d-lg-block" src="/bootstraptutorial/bodybackground.png" alt="">
-<img class="img_background_body_mobile d-md-block d-lg-none" src="/bootstraptutorial/bodybackgroundmobile.png" alt="">
+<img class="img_background_body d-none d-lg-block" src="bodybackground.png" alt="">
+<img class="img_background_body_mobile d-md-block d-lg-none" src="bodybackgroundmobile.png" alt="">
 <div>
   <div class="text-center title_above_boxes_body">
     <h1 class="">
@@ -268,7 +268,7 @@
   
   
         <div class="col-4">
-          <img src="/bootstraptutorial/4.png" class="image_icon_1 img-fluid rounded-start" alt="...">
+          <img src="4.png" class="image_icon_1 img-fluid rounded-start" alt="...">
         </div>
   
   
@@ -288,7 +288,7 @@
           </div>
   
           <div class="col-4">
-            <img src="/bootstraptutorial/4.png" class="img-fluid rounded-start" alt="...">
+            <img src="4.png" class="img-fluid rounded-start" alt="...">
           </div>
   
         </div>
@@ -309,7 +309,7 @@
           </div>
           
           <div class="col-4">
-            <img src="/bootstraptutorial/4.png" class="img-fluid rounded-start" alt="...">
+            <img src="4.png" class="img-fluid rounded-start" alt="...">
           </div>
   
       </div>
@@ -367,7 +367,7 @@
 </div>
 <!-- footer -->
 <div class="fluid text-center">
-  <img class="logo_footer img-fluid" src="/bootstraptutorial/4.png" alt="">
+  <img class="logo_footer img-fluid" src="4.png" alt="">
   <div class="title_footer text-dark fw-bold mb-3">
     بو پتر پێزانینان پەیوەندیێ ب مە بکە
   </div>
