--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body>
 <!-- navbar -->
-    <div class="thewholenav nnnnnnnnnne container-fluid fixed-top">
+    <div class="thewholenav container-fluid fixed-top">
         <div class=" row  justify-content-center align-items-center">
           <div class="col-4 text-start ">
             <div class="col  ">
@@ -128,7 +128,7 @@
         <div class="col-8 col-sm-7 col-md-8  col-lg-7 text-center text-lg-end">
             <h1>
                 <div class="Tittle_showcase">
-                    خولێن ئینگلیزی یێن <span class="text-warning">پەیڤین (Zoom)</span>
+                    خولێن ئینگلیزی یێن <span dir="auto" class="text-warning">پەیڤین (Zoom)</span>
                 </div>
             </h1>
             <p >
