--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <div class="col-8 col-sm-7 col-md-8  col-lg-7 text-center text-lg-end">
             <h1>
                 <div class="Tittle_showcase">
-                  <span dir="auto">خولێن زمانێ ئینگلیزی یێن     <span> پەیڤین   (Zoom)</span></span>
+                  <span dir="auto">خولێن زمانێ ئینگلیزی یێن     <span class="text-warning"> پەیڤین   (Zoom)</span></span>
                 </div>
             </h1>
             <p >
