--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                 </div>
             </h1>
             <p >
-              <span dir="auto">
+              <span class="background_text" dir="auto">
                 فێری زمانێ ئینگلیزی ببە ب ساناهیترین شێوە و بزانە کیش رێك و شێواز بو تە باشە و دگەل تە دگونجت دگەل مەدا. ماموستایێن تایبەت مە یێن هەین دشێن بو ماوەیەکێ درێژ دگەل تە بن و هاریکار بن و بەرێخودانێ ل ئاریشا تە بکن و چارەکن!  و هەروەسا تو دشێی د خولێن مە یێن (VIP) دا بەشدار بی هەرگاڤا تە بڤێت.    
               </span>
             </p>
@@ -147,7 +147,7 @@
 <div class=" container-fluid mt-5 text-end d-flex justify-content-center">
   <div class="font_size row col-sm-6 col-lg-12  justify-content-center g-2">
     
-  <div class="boxes_background card" >
+  <div class="boxes_background card">
     <div class="row  g-0 align-items-center">
      
 
