--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Home</title>
+    <title>test</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="background_body_boxes_and_btn.css">
     <link rel="stylesheet" href="below_background_boxes.css">
@@ -25,22 +25,22 @@
         <div class=" row  justify-content-center align-items-center">
           <div class="col-4 text-start ">
             <div class="col  ">
-                <img class="img" src="4.png" alt="">
+                 <img id="Top" class="img"  src="4.png" alt="">
               </div>
           </div>
           <div class="col ">
             <div class="d-none d-lg-flex row p-0 row-cols text-center align-items-center justify-content-center">
                 <div class="navbar_underline col p-0">
-                    <a class="navbar_links nav-link"             onclick="scrollToBottom()"  href="#bottom" >پەیوەندی</a>
+                    <a class="navbar_links nav-link" onclick="scrollToBottom()"  href="#bottom" >پەیوەندی</a>
                 </div>
                 <div class="navbar_underline col p-0">
-                    <a class="navbar_links nav-link" href="courses">خولێن بەردەست</a>
+                    <a class="navbar_links nav-link" href="courses.html">خولێن بەردەست</a>
                 </div>
                 <div class="navbar_underline col p-0">
-                    <a class="navbar_links nav-link" href="teachers">ماموستا</a>
+                    <a class="navbar_links nav-link" href="teachers.html">ماموستا</a>
                 </div>
                 <div class="navbar_underline col p-0">
-                    <a class="navbar_links nav-link" href="home">دەستپێك</a>
+                    <a class="navbar_links nav-link" href="#">دەستپێك</a>
                 </div>
                 <div class="col p-0">
                     <button class="navb_btn_1 btn " type="submit"> <a href="signup"> خۆتوومارکرن</a></button>
@@ -367,8 +367,8 @@
 </div>
 <!-- footer -->
 <div class="fluid text-center">
-  <img id="bottom"    class="logo_footer img-fluid" src="4.png" alt="">
-  <div class="title_footer text-dark fw-bold mb-3">
+    <a onclick="scrollToTop()"  href="#top"> <img     class="logo_footer img-fluid" src="4.png" alt=""></a>
+  <div id="bottom" class="title_footer text-dark fw-bold mb-3">
     بو پتر پێزانینان پەیوەندیێ ب مە بکە
   </div>
 
@@ -395,10 +395,20 @@
 <script>
   function scrollToBottom() {
     // Get the element with the id "bottom"
-    var element = document.getElementById("bottom");
+    var element = document.getElementById("image");
 
     // Scroll to the element's position
-    element.scrollIntoView({ behavior: "smooth" });
+    element.scrollIntoView({ behavior: "linear" });
+  }
+</script>
+
+<script>
+  function scrollToTop() {
+    // Get the element with the id "bottom"
+    var element = document.getElementById("top");
+
+    // Scroll to the element's position
+    element.scrollIntoView({ behavior: "linear" });
   }
 </script>
 
