--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         <div class=" row  justify-content-center align-items-center">
           <div class="col-4 text-start ">
             <div class="col  ">
-                 <img id="Top" class="img"  src="4.png" alt="">
-              </div>
+              <a href="index.html"><img id="Top" class="img"  src="4.png" alt=""></a> 
+            </div>
           </div>
           <div class="col ">
             <div class="d-none d-lg-flex row p-0 row-cols text-center align-items-center justify-content-center">
@@ -43,11 +43,11 @@
                     <a class="navbar_links nav-link" href="#">دەستپێك</a>
                 </div>
                 <div class="col p-0">
-                    <button class="navb_btn_1 btn " type="submit"> <a href="signup"> خۆتوومارکرن</a></button>
+                    <button class="navb_btn_1 btn " type="submit"> <a class="nav-link" href="signup"> خۆتوومارکرن</a></button>
 
                 </div>
                 <div class="col p-0">
-                    <button class="navb_btn_2 btn " type="submit"> <a href="login">چوونا ژوور </a></button>
+                    <button class="navb_btn_2 btn " type="submit"> <a class="nav-link" href="login">چوونا ژوور </a></button>
                 </div>
             </div>
 
@@ -72,7 +72,7 @@
                         <div class="offcanvas-header">
                           <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">
                             <div class="col">
-                                <img class="img" src="4.png" alt="">
+                                <a href="index.html"><img class="img" src="4.png" alt=""></a>
                               </div>
                           </h5>
                           <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
@@ -93,11 +93,11 @@
                               <hr>
                             </li>
                             <li class="nav-item">
-                              <a class="nav-link active" aria-current="page" href="#">خولێن بەردەست</a>
+                              <a class="nav-link active" aria-current="page" href="courses.html">خولێن بەردەست</a>
                               <hr>
                             </li>
                             <li class="nav-item">
-                              <a class="nav-link active" aria-current="page" href="#">پەیوەندی کرن</a>
+                              <a class="nav-link active" aria-current="page" onclick="scrollToBottom()"  href="#bottom" >پەیوەندی کرن</a>
                               <hr>
                             </li>
 
