--- a/courses.html
+++ b/courses.html
@@ -111,11 +111,11 @@
               <a class="navbar_links nav-link" href="index.html">دەستپێك</a>
           </div>
           <div class="col p-0">
-              <button class="navb_btn_1 btn " type="submit"> <a class="nav-link" href="signup"> خۆتوومارکرن</a></button>
+              <button class="navb_btn_1 btn " type="submit"> <a class="nav-link" href="signup.html"> خۆتوومارکرن</a></button>
 
           </div>
           <div class="col p-0">
-              <button class="navb_btn_2 btn " type="submit"> <a class="nav-link" href="login">چوونا ژوور </a></button>
+              <button class="navb_btn_2 btn " type="submit"> <a class="nav-link" href="login.html">چوونا ژوور </a></button>
           </div>
       </div>
 
@@ -174,8 +174,8 @@
                     </ul>
                     <form class="d-flex ms-4 me-4 justify-content-end mt-3" role="search">
                     <div class="row gy-1">
-                      <button class="btn navb_btn_2" type="submit">چوونا ژوور</button>
-                      <button class="btn navb_btn_1" type="submit">خۆتوومارکرن</button>
+                      <button class="btn navb_btn_2" type="submit"> <a class="nav-link" href="signup.html">چوونا ژوور</a> </button>
+                      <button class="btn navb_btn_1" type="submit"> <a class="nav-link" href="login.html">خۆتوومارکرن </a></button>
                   </div>
                     </form>
                   </div>
