--- a/signup.html
+++ b/signup.html
@@ -20,6 +20,15 @@
     <link rel="stylesheet" href="return_button.css">
     </head>
 
+    <style>
+           /* responsive */
+           @media (max-width: 992px) {
+        .page_efinition {
+            font-size: 20px!important;
+        }
+        }
+    </style>
+
 
 <body>
 <!-- navbar -->
@@ -107,8 +116,8 @@
                           </ul>
                           <form class="d-flex ms-4 me-4 justify-content-end mt-3" role="search">
                           <div class="row gy-1">
-                            <button class="btn navb_btn_2" type="submit"> <a class="nav-link" href="signup.html">چوونا ژوور</a> </button>
-                            <button class="btn navb_btn_1" type="submit"> <a class="nav-link" href="login.html">خۆتوومارکرن </a></button>
+                            <button class="btn navb_btn_2" type="submit"> <a class="nav-link" href="login.html">چوونا ژوور</a> </button>
+                            <button class="btn navb_btn_1" type="submit"> <a class="nav-link" href="signup.html">خۆتوومارکرن </a></button>
                         </div>
                           </form>
                         </div>
@@ -143,6 +152,22 @@
     </div>
 </div>
 
+</div>
+
+
+
+<!-- page definition -->
+<div class=" container-fluid mt-5 text-end">
+  <div class="font_size row justify-content-center ">
+    
+  <div class="boxes_background page_definition card">
+      <div class="col ">
+        <div class="card-body  text-center">
+          <h5 class="page_efinition card-title fs-3">برگا خۆتوومارکرنێ</h5>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 
 
@@ -197,18 +222,21 @@
 </div>
 <!-- footer -->
 <div class="fluid text-center">
-    <a onclick="scrollToTop()"  href="#top"> <img     class="logo_footer img-fluid" src="4.png" alt=""></a>
-  <div id="bottom" class="title_footer text-dark fw-bold mb-3">
-    بو پتر پێزانینان پەیوەندیێ ب مە بکە
+  <a onclick="scrollToTop()"  href="#top"> <img     class="logo_footer img-fluid" src="4.png" alt=""></a>
+  <div class="user-select-none text-dark">
+    Made by: Ahmed Avdal Shereef
   </div>
+<div id="bottom" class="title_footer text-dark fw-bold mb-3">
+  بو پتر پێزانینان پەیوەندیێ ب مە بکە
+</div>
 
 
 
-  <div class="background_footer text-light d-lg-flex p-2">
-    <div class="col p-2">Gmail: peyvinesl@gmail.com</div>
-    <div class="col p-2">Phone: +964 0750 823 0170</div>
-    <div class="col p-2">Instagram: @peyvin_courses</div>
-  </div>
+<div class="background_footer text-light d-lg-flex p-2">
+  <div class="col p-2"> <a class="nav-link" href="mailto:peyvinesl@gmail.com">Gmail: peyvinesl@gmail.com</a></div>
+  <div class="col p-2"><a class="nav-link" href="https://wa.me/9647508230170">Phone: +964 0750 823 0170</a></div>
+  <div class="col p-2"><a class="nav-link" href="https://www.instagram.com/peyvin_courses?igshid=OGQ5ZDc2ODk2ZA==">Instagram: @peyvin_courses </a></div>
+</div>
 </div>
 
 
