--- a/courses.html
+++ b/courses.html
@@ -68,7 +68,11 @@
 
 
   /* responsive */
-
+  @media (max-width: 992px) {
+        .page_efinition {
+            font-size: 20px!important;
+        }
+        }
 
 
   @media (max-width: 884px) {
@@ -157,7 +161,7 @@
                         <hr>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">ماموستا</a>
+                        <a class="nav-link active" aria-current="page" href="teachers.html">ماموستا</a>
                         <hr>
                       </li>
                       <li class="nav-item">
@@ -212,7 +216,19 @@
 
 </div>
 
-
+<!-- page definition -->
+<div class=" container-fluid mt-5 text-end">
+  <div class="font_size row justify-content-center ">
+    
+  <div class="boxes_background page_definition card">
+      <div class="col ">
+        <div class="card-body  text-center">
+          <h5 class="page_efinition card-title fs-3">برگا خولان</h5>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 
 
 
@@ -309,6 +325,9 @@
 <!-- footer -->
 <div class="fluid text-center">
   <a onclick="scrollToTop()"  href="#top"> <img     class="logo_footer img-fluid" src="4.png" alt=""></a>
+  <div class="user-select-none text-dark">
+    Made by: Ahmed Avdal Shereef
+  </div>
 <div id="bottom" class="title_footer text-dark fw-bold mb-3">
   بو پتر پێزانینان پەیوەندیێ ب مە بکە
 </div>
@@ -316,9 +335,9 @@
 
 
 <div class="background_footer text-light d-lg-flex p-2">
-  <div class="col p-2">Gmail: peyvinesl@gmail.com</div>
-  <div class="col p-2">Phone: +964 0750 823 0170</div>
-  <div class="col p-2">Instagram: @peyvin_courses</div>
+  <div class="col p-2"> <a class="nav-link" href="mailto:peyvinesl@gmail.com">Gmail: peyvinesl@gmail.com</a></div>
+  <div class="col p-2"><a class="nav-link" href="https://wa.me/9647508230170">Phone: +964 0750 823 0170</a></div>
+  <div class="col p-2"><a class="nav-link" href="https://www.instagram.com/peyvin_courses?igshid=OGQ5ZDc2ODk2ZA==">Instagram: @peyvin_courses </a></div>
 </div>
 </div>
 
