--- a/index.html
+++ b/index.html
@@ -366,18 +366,21 @@
 </div>
 <!-- footer -->
 <div class="fluid text-center">
-    <a onclick="scrollToTop()"  href="#top"> <img     class="logo_footer img-fluid" src="4.png" alt=""></a>
-  <div id="bottom" class="title_footer text-dark fw-bold mb-3">
-    بو پتر پێزانینان پەیوەندیێ ب مە بکە
+  <a onclick="scrollToTop()"  href="#top"> <img     class="logo_footer img-fluid" src="4.png" alt=""></a>
+  <div class="user-select-none text-dark">
+    Made by: Ahmed Avdal Shereef
   </div>
+<div id="bottom" class="title_footer text-dark fw-bold mb-3">
+  بو پتر پێزانینان پەیوەندیێ ب مە بکە
+</div>
 
 
 
-  <div class="background_footer text-light d-lg-flex p-2">
-    <div class="col p-2">Gmail: peyvinesl@gmail.com</div>
-    <div class="col p-2">Phone: +964 0750 823 0170</div>
-    <div class="col p-2">Instagram: @peyvin_courses</div>
-  </div>
+<div class="background_footer text-light d-lg-flex p-2">
+  <div class="col p-2"> <a class="nav-link" href="mailto:peyvinesl@gmail.com">Gmail: peyvinesl@gmail.com</a></div>
+  <div class="col p-2"><a class="nav-link" href="https://wa.me/9647508230170">Phone: +964 0750 823 0170</a></div>
+  <div class="col p-2"><a class="nav-link" href="https://www.instagram.com/peyvin_courses?igshid=OGQ5ZDc2ODk2ZA==">Instagram: @peyvin_courses </a></div>
+</div>
 </div>
 
 
