--- a/courses.html
+++ b/courses.html
@@ -321,12 +321,11 @@
 
 
 
-
 <!-- footer -->
 <div class="fluid text-center">
   <a onclick="scrollToTop()"  href="#top"> <img     class="logo_footer img-fluid" src="4.png" alt=""></a>
   <div class="user-select-none text-dark">
-    Made by: Ahmed Avdal Shereef
+    Copy Right &copy; Ahmed Avdal Shereef
   </div>
 <div id="bottom" class="title_footer text-dark fw-bold mb-3">
   بو پتر پێزانینان پەیوەندیێ ب مە بکە
