--- a/courses.html
+++ b/courses.html
@@ -5,92 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>test</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="background_body_boxes_and_btn.css">
-    <link rel="stylesheet" href="below_background_boxes.css">
-    <link rel="stylesheet" href="below_body_background_boxes.css">
-    <link rel="stylesheet" href="below_boxes_paragraph.css">
-    <link rel="stylesheet" href="below navbar and button.css">
-    <link rel="stylesheet" href="footer.css">
-    <link rel="stylesheet" href="general.css">
-    <link rel="stylesheet" href="menu_contents.css">
-    <link rel="stylesheet" href="navbar_buttons.css">
-    <link rel="stylesheet" href="navbar_hover_underline.css">
-    <link rel="stylesheet" href="navbar_logo_and_color.css">
-    <link rel="stylesheet" href="showcase.css">
+    <link rel="stylesheet" href="ahmed_card.css">
+    <link rel="stylesheet" href="courses.css">
+    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="jagar_card.css">
+    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="michael_card.css">
+    <link rel="stylesheet" href="signup.css">
+    <link rel="stylesheet" href="teachers.css">
     </head>
-
-
-<style>
-
-
-  /* return_button */
-.return_button {
-    background-color: #3E1AA1;
-    color: white;
-    width: 100px;
-    font-size: 25px;
-    margin-top: 50px;
-    border: none;
-    border-radius: 20px;
-  }
-
-    /* all the boxes */
-  .course_offers_1 {
-    margin-top: 100px;
-    max-width: 800px;
-    border-radius: 20px;
-    font-size: 20px;
-  }
-
-  .numbers_boxes {
-      background-color: #3E1AA1;
-      width: fit-content;
-      margin: auto;
-      margin-bottom: 20px;
-      font-size: 30px;
-      font-weight: bold;
-    }
-
-  .course_offers_1, row{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    }
-
-
-  .text_of_course_offers_1 {
-    padding: 40px;
-    border-radius: 15px;
-    background-color: #3E1AA1!important;
-  }
-  
-
-
-  /* responsive */
-  @media (max-width: 992px) {
-        .page_efinition {
-            font-size: 20px!important;
-        }
-        }
-
-
-  @media (max-width: 884px) {
-    .course_offers_1 {
-    margin-top: 100px;
-    width: 70%;
-    border-radius: 20px;
-    font-size: 20px;
-  }
-  }
-
-
-
-
-
-
-
-</style>
 <body>
 <!-- navbar -->
 <div class="thewholenav container-fluid fixed-top">
@@ -215,7 +138,6 @@
 </div>
 
 </div>
-
 <!-- page definition -->
 <div class=" container-fluid mt-5 text-end">
   <div class="font_size row justify-content-center ">
@@ -229,17 +151,10 @@
     </div>
   </div>
 </div>
-
-
-
-
-
 <!-- return button return_button ;-->
-
 <div class="container">
   <div class="row">
     <button class="return_button"> <a class="nav-link" href="index.html">&#8592; </a></button>
-
   </div>
 </div>
 
