--- a/michael.html
+++ b/michael.html
@@ -5,68 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>test</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="background_body_boxes_and_btn.css">
-    <link rel="stylesheet" href="below_background_boxes.css">
-    <link rel="stylesheet" href="below_body_background_boxes.css">
-    <link rel="stylesheet" href="below_boxes_paragraph.css">
-    <link rel="stylesheet" href="below navbar and button.css">
-    <link rel="stylesheet" href="footer.css">
-    <link rel="stylesheet" href="general.css">
-    <link rel="stylesheet" href="menu_contents.css">
-    <link rel="stylesheet" href="navbar_buttons.css">
-    <link rel="stylesheet" href="navbar_hover_underline.css">
-    <link rel="stylesheet" href="navbar_logo_and_color.css">
-    <link rel="stylesheet" href="showcase.css">
-    <link rel="stylesheet" href="return_button.css">
+    <link rel="stylesheet" href="ahmed_card.css">
+    <link rel="stylesheet" href="courses.css">
+    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="jagar_card.css">
+    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="michael_card.css">
+    <link rel="stylesheet" href="signup.css">
+    <link rel="stylesheet" href="teachers.css">
     </head>
 
 
-    <style>
-        .the_cards {
-            width: 50%;
-            padding-top: 100px;
-        }
-
-        .card_texts {
-            background-color: #3E1AA1!important;
-            border-radius: 20px;
-            padding-right: 20px;
-            padding-left: 20px;
-            padding-top: 70px;
-            padding-bottom: 20px;
-        }
-
-        .imag_cards_size {
-            width: 400px;
-            margin-bottom: -50px;
-        }
-
-
-
-        /* responsive */
-        @media (max-width: 992px) {
-            .the_cards {
-            width: 90%;
-            padding-top: 100px;
-        }
-
-
-
-            .imag_cards_size {
-            width: 200px;
-            margin-bottom: -50px;
-        }
-
-
-        .page_efinition {
-            font-size: 20px!important;
-        }
-        }
-
-
-
-   
-    </style>
 
 <body>
 <!-- navbar -->
@@ -219,7 +168,7 @@
 
 
 
-
+<!-- michael card -->
 
 <div class="the_cards container ">
     <div class="row">
