--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                   <span dir="auto">خولێن زمانێ ئینگلیزی یێن     <span class="text-warning"> پەیڤین   (Zoom)</span></span>
                 </div>
             </h1>
-            <p >
+            <p class="background_text">
               <span class="background_text" dir="auto">
                 فێری زمانێ ئینگلیزی ببە ب ساناهیترین شێوە و بزانە کیش رێك و شێواز بو تە باشە و دگەل تە دگونجت دگەل مەدا. ماموستایێن تایبەت مە یێن هەین دشێن بو ماوەیەکێ درێژ دگەل تە بن و هاریکار بن و بەرێخودانێ ل ئاریشا تە بکن و چارەکن!  و هەروەسا تو دشێی د خولێن مە یێن (VIP) دا بەشدار بی هەرگاڤا تە بڤێت.    
               </span>
