--- a/html/ahmed.html
+++ b/html/ahmed.html
@@ -2,28 +2,25 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">courses
     <title>test</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="ahmed_card.css">
-    <link rel="stylesheet" href="courses.css">
-    <link rel="stylesheet" href="index.css">
-    <link rel="stylesheet" href="jagar_card.css">
-    <link rel="stylesheet" href="login.css">
-    <link rel="stylesheet" href="michael_card.css">
-    <link rel="stylesheet" href="signup.css">
-    <link rel="stylesheet" href="teachers.css">
+    <link rel="stylesheet" href="/css/ahmed_card.css">
+    <link rel="stylesheet" href="/css/courses.css">
+    <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="/css/jagar_card.css">
+    <link rel="stylesheet" href="/css/login.css">
+    <link rel="stylesheet" href="/css/michael_card.css">
+    <link rel="stylesheet" href="/css/signup.css">
+    <link rel="stylesheet" href="/css/teachers.css">
     </head>
-
-
-
 <body>
 <!-- navbar -->
     <div class="thewholenav container-fluid fixed-top">
         <div class=" row  justify-content-center align-items-center">
           <div class="col-4 text-start ">
             <div class="col  ">
-              <a href="index.html"><img id="Top" class="img"  src="4.png" alt=""></a> 
+              <a href="/html/index.html"><img id="Top" class="img"  src="/images/4.png" alt=""></a> 
             </div>
           </div>
           <div class="col ">
@@ -32,19 +29,19 @@
                     <a class="navbar_links nav-link" onclick="scrollToBottom()"  href="#bottom" >پەیوەندی</a>
                 </div>
                 <div class="navbar_underline col p-0">
-                    <a class="navbar_links nav-link" href="courses.html">خولێن بەردەست</a>
+                    <a class="navbar_links nav-link" href="/html/courses.html">خولێن بەردەست</a>
                 </div>
                 <div class="navbar_underline col p-0">
-                    <a class="navbar_links nav-link" href="teachers.html">ماموستا</a>
+                    <a class="navbar_links nav-link" href="/html/teachers.html">ماموستا</a>
                 </div>
                 <div class="navbar_underline col p-0">
-                    <a class="navbar_links nav-link" href="index.html">دەستپێك</a>
+                    <a class="navbar_links nav-link" href="/html/index.html">دەستپێك</a>
                 </div>
                 <div class="col p-0">
-                  <button class="navb_btn_1 btn " type="submit"> <a class="nav-link" href="signup.html"> خۆتوومارکرن</a></button>
+                  <button class="navb_btn_1 btn " type="submit"> <a class="nav-link" href="/html/signup.html"> خۆتوومارکرن</a></button>
                 </div>
                 <div class="col p-0">
-                    <button class="navb_btn_2 btn " type="submit"> <a class="nav-link" href="login.html">چوونا ژوور </a></button>
+                    <button class="navb_btn_2 btn " type="submit"> <a class="nav-link" href="/html/login.html">چوونا ژوور </a></button>
                 </div>
             </div>
 
@@ -69,7 +66,7 @@
                         <div class="offcanvas-header">
                           <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">
                             <div class="col">
-                                <a href="index.html"><img class="img" src="4.png" alt=""></a>
+                                <a href="/html/index.html"><img class="img" src="/images/4.png" alt=""></a>
                               </div>
                           </h5>
                           <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
@@ -82,15 +79,15 @@
                             
                           <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                             <li class="nav-item">
-                              <a class="nav-link active" aria-current="page" href="index.html">دەستپێك</a>
+                              <a class="nav-link active" aria-current="page" href="/html/index.html">دەستپێك</a>
                               <hr>
                             </li>
                             <li class="nav-item">
-                              <a class="nav-link active" aria-current="page" href="teachers.html">ماموستا</a>
+                              <a class="nav-link active" aria-current="page" href="/html/teachers.html">ماموستا</a>
                               <hr>
                             </li>
                             <li class="nav-item">
-                              <a class="nav-link active" aria-current="page" href="courses.html">خولێن بەردەست</a>
+                              <a class="nav-link active" aria-current="page" href="/html/courses.html">خولێن بەردەست</a>
                               <hr>
                             </li>
                             <li class="nav-item">
@@ -103,8 +100,8 @@
                           </ul>
                           <form class="d-flex ms-4 me-4 justify-content-end mt-3" role="search">
                           <div class="row gy-1">
-                            <button class="btn navb_btn_2" type="submit"> <a class="nav-link" href="login.html">چوونا ژوور</a> </button>
-                            <button class="btn navb_btn_1" type="submit"> <a class="nav-link" href=" signup.html">خۆتوومارکرن </a></button>
+                            <button class="btn navb_btn_2" type="submit"> <a class="nav-link" href="/html/login.html">چوونا ژوور</a> </button>
+                            <button class="btn navb_btn_1" type="submit"> <a class="nav-link" href=" /html/signup.html">خۆتوومارکرن </a></button>
                         </div>
                           </form>
                         </div>
@@ -118,8 +115,8 @@
 </div>
 <!-- showcase -->
 <div>
-    <img src="backgroundhome.png" class="card-img d-none d-lg-block " alt="...">
-    <img src="ipad.png" class="card-img  d-md-block d-lg-none" alt="">
+    <img src="/images/backgroundhome.png" class="card-img d-none d-lg-block " alt="...">
+    <img src="/images/ipad.png" class="card-img  d-md-block d-lg-none" alt="">
     <div class="below_navbar_text p-5 card-img-overlay container-fluid ">
       <div class="row justify-content-center  justify-content-lg-end">
           <div class="col-8 col-sm-7 col-md-8  col-lg-7 text-center text-lg-end">
@@ -148,7 +145,7 @@
     <div class="boxes_background page_definition card">
         <div class="col ">
           <div class="card-body  text-center">
-            <h5 class="page_efinition card-title fs-3">ماموستا مایکل</h5>
+            <h5 class="page_efinition card-title fs-3">ماموستا احمد</h5>
           </div>
         </div>
       </div>
@@ -158,7 +155,7 @@
 <!-- return_button -->
 <div class="container">
     <div class="row">
-    <button class="return_button"> <a class="nav-link" href="teachers.html">&#8592; </a></button>
+    <button class="return_button"> <a class="nav-link" href="/html/teachers.html">&#8592; </a></button>
 
     </div>
 </div>
@@ -168,18 +165,18 @@
 
 
 
-<!-- michael card -->
+
 
 <div class="the_cards container ">
     <div class="row">
         <div class="text-center">
            <div>
-            <img class="imag_cards_size img-fluid" src="2michael.png" alt="">
+            <img class="imag_cards_size img-fluid" src="/images/1ahmed.png" alt="">
            </div>
 
             <div class="card_texts text-center">
-                <h1>ماموستا مایکل</h1>
-                <p class="lead">تودشێ نوکە فێرببی دگەل <span class="fw-bold">ماموستا مایکلی  </span>و پتر پێزانینا وەرگری ب سەحکرنا ڤیدیویا ل خوارێ</p>
+                <h1>ماموستا احمد</h1>
+                <p class="lead">تودشێ نوکە فێرببی دگەل <span class="fw-bold">ماموستا احمدی </span>و پتر پێزانینا وەرگری ب سەحکرنا ڤیدیویا ل خوارێ</p>
                 <button class="btn btn-warning">
                         ڤیدیویا ماموستای
                 </button>
@@ -209,7 +206,7 @@
 
 <!-- footer -->
 <div class="fluid text-center">
-  <a onclick="scrollToTop()"  href="#top"> <img     class="logo_footer img-fluid" src="4.png" alt=""></a>
+  <a onclick="scrollToTop()"  href="#top"> <img     class="logo_footer img-fluid" src="/images/4.png" alt=""></a>
   <div class="user-select-none text-dark">
     Copy Right &copy; Ahmed Avdal Shereef
   </div>
