--- a/html/jagar.html
+++ b/html/jagar.html
@@ -20,7 +20,7 @@
         <div class=" row  justify-content-center align-items-center">
           <div class="col-4 text-start ">
             <div class="col  ">
-              <a href="/html/index.html"><img id="Top" class="img"  src="/images/4.png" alt=""></a> 
+              <a href="index.html"><img id="Top" class="img"  src="/images/4.png" alt=""></a> 
             </div>
           </div>
           <div class="col ">
@@ -35,7 +35,7 @@
                     <a class="navbar_links nav-link" href="/html/teachers.html">ماموستا</a>
                 </div>
                 <div class="navbar_underline col p-0">
-                    <a class="navbar_links nav-link" href="/html/index.html">دەستپێك</a>
+                    <a class="navbar_links nav-link" href="index.html">دەستپێك</a>
                 </div>
                 <div class="col p-0">
                   <button class="navb_btn_1 btn " type="submit"> <a class="nav-link" href="/html/signup.html"> خۆتوومارکرن</a></button>
@@ -66,7 +66,7 @@
                         <div class="offcanvas-header">
                           <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">
                             <div class="col">
-                                <a href="/html/index.html"><img class="img" src="/images/4.png" alt=""></a>
+                                <a href="index.html"><img class="img" src="/images/4.png" alt=""></a>
                               </div>
                           </h5>
                           <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
@@ -79,7 +79,7 @@
                             
                           <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                             <li class="nav-item">
-                              <a class="nav-link active" aria-current="page" href="/html/index.html">دەستپێك</a>
+                              <a class="nav-link active" aria-current="page" href="index.html">دەستپێك</a>
                               <hr>
                             </li>
                             <li class="nav-item">
