--- a/index.html
+++ b/index.html
@@ -5,9 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>test</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/index/index.css">
+
+    <link rel="stylesheet" href="/css/index/0general.css">
+    <link rel="stylesheet" href="/css/index/1navbar.css">
+    <link rel="stylesheet" href="/css/index/3below_background_boxes.css">
+    <link rel="stylesheet" href="/css/index/2showcase.css">
+    <link rel="stylesheet" href="/css/index/4paragraph.css">
+    <link rel="stylesheet" href="/css/index/5shape&boxes.css">
+    <link rel="stylesheet" href="/css/index/6paragraph_below_shape&boxes.css">
+    <link rel="stylesheet" href="/css/index/7footter.css">
+    <link rel="stylesheet" href="/css/returnbutton.css">
     <link rel="stylesheet" href="/css/ahmed_card.css">
     <link rel="stylesheet" href="/css/courses.css">
-    <link rel="stylesheet" href="/css/index.css">
     <link rel="stylesheet" href="/css/jagar_card.css">
     <link rel="stylesheet" href="/css/login.css">
     <link rel="stylesheet" href="/css/michael_card.css">
@@ -33,19 +43,19 @@
                     <a class="navbar_links nav-link" onclick="scrollToBottom()"  href="#bottom" >پەیوەندی</a>
                 </div>
                 <div class="navbar_underline col p-0">
-                    <a class="navbar_links nav-link" href="/html/courses.html">خولێن بەردەست</a>
+                    <a class="navbar_links nav-link" href="courses.html">خولێن بەردەست</a>
                 </div>
                 <div class="navbar_underline col p-0">
-                    <a class="navbar_links nav-link" href="/html/teachers.html">ماموستا</a>
+                    <a class="navbar_links nav-link" href="teachers.html">ماموستا</a>
                 </div>
                 <div class="navbar_underline col p-0">
                     <a class="navbar_links nav-link" href="index.html">دەستپێك</a>
                 </div>
                 <div class="col p-0">
-                  <button class="navb_btn_1 btn " type="submit"> <a class="nav-link" href="/html/signup.html"> خۆتوومارکرن</a></button>
+                  <button class="navb_btn_1 btn " type="submit"> <a class="nav-link" href="signup.html"> خۆتوومارکرن</a></button>
                 </div>
                 <div class="col p-0">
-                    <button class="navb_btn_2 btn " type="submit"> <a class="nav-link" href="/html/login.html">چوونا ژوور </a></button>
+                    <button class="navb_btn_2 btn " type="submit"> <a class="nav-link" href="login.html">چوونا ژوور </a></button>
                 </div>
             </div>
 
@@ -87,11 +97,11 @@
                               <hr>
                             </li>
                             <li class="nav-item">
-                              <a class="nav-link active" aria-current="page" href="/html/teachers.html">ماموستا</a>
+                              <a class="nav-link active" aria-current="page" href="teachers.html">ماموستا</a>
                               <hr>
                             </li>
                             <li class="nav-item">
-                              <a class="nav-link active" aria-current="page" href="/html/courses.html">خولێن بەردەست</a>
+                              <a class="nav-link active" aria-current="page" href="courses.html">خولێن بەردەست</a>
                               <hr>
                             </li>
                             <li class="nav-item">
@@ -104,8 +114,8 @@
                           </ul>
                           <form class="d-flex ms-4 me-4 justify-content-end mt-3" role="search">
                           <div class="row gy-1">
-                            <button class="btn navb_btn_2" type="submit"> <a class="nav-link" href="/html/login.html">چوونا ژوور</a> </button>
-                            <button class="btn navb_btn_1" type="submit"> <a class="nav-link" href=" /html/signup.html">خۆتوومارکرن </a></button>
+                            <button class="btn navb_btn_2" type="submit"> <a class="nav-link" href="login.html">چوونا ژوور</a> </button>
+                            <button class="btn navb_btn_1" type="submit"> <a class="nav-link" href=" signup.html">خۆتوومارکرن </a></button>
                         </div>
                           </form>
                         </div>
@@ -140,13 +150,12 @@
 
 </div>
 <!-- below background boxes -->
-<div class="container-fluid boxes_width text-end d-flex justify-content-center">
-  <div class=" row col-sm-8 col-lg-12 justify-content-center ">
+<div class="container-fluid text-end d-flex justify-content-center">
+  <div class=" row col-sm-12 col-lg-12 justify-content-center ">
     
-  <div class="col-lg-4  boxes_background card">
+  <div class="boxes_background col-lg-4  card">
     <div class="row g-0 align-items-center">
      
-
       <div class="col">
         <div class="card-body">
           <h5 class="card_title">خولێن ئینگلیزی یێن ئونلاین</h5>
@@ -154,12 +163,9 @@
         </div>
       </div>
 
-
       <div class="col-4">
         <img src="/images/4.png" class="image_icon_1 img-fluid rounded-start" alt="...">
       </div>
-
-
     </div>
   </div>
 
