--- a/michael.html
+++ b/michael.html
@@ -29,15 +29,18 @@
 <div class="thewholenav container-fluid fixed-top">
   <div class=" row  justify-content-center align-items-center">
     <div class="col-4 text-start ">
-      <div class="col  ">
+      <div class="col">
         <a href="index.html"><img id="Top" class="img"  src="/images/4.png" alt=""></a> 
       </div>
     </div>
-    <div class="col ">
-      <div class="d-none d-lg-flex row p-0 row-cols text-center align-items-center justify-content-center">
+    <div class="col">
+      <div class="navbar_width d-none d-lg-flex row p-0 row-cols text-center align-items-center justify-content-center">
           <div class="navbar_underline col p-0">
               <a class="navbar_links nav-link" onclick="scrollToBottom()"  href="#bottom" >پەیوەندی</a>
-          </div>
+            </div>
+            <div class="navbar_underline col p-0">
+                <a class="navbar_links nav-link" href="registration.html">بەشداربوون </a>
+            </div>
           <div class="navbar_underline col p-0">
               <a class="navbar_links nav-link" href="courses.html">خولێن بەردەست</a>
           </div>
@@ -48,7 +51,7 @@
               <a class="navbar_links nav-link" href="index.html">دەستپێك</a>
           </div>
           <div class="col p-0">
-            <button class="navb_btn_1 btn " type="submit"> <a class="nav-link" href="signup.html"> خۆتوومارکرن</a></button>
+            <button class="navb_btn_1 btn " type="submit"> <a class="nav-link" href="signup.html"> خۆ توومارکرن</a></button>
           </div>
           <div class="col p-0">
               <button class="navb_btn_2 btn " type="submit"> <a class="nav-link" href="login.html">چوونا ژوور </a></button>
@@ -100,6 +103,10 @@
                         <a class="nav-link active" aria-current="page" href="courses.html">خولێن بەردەست</a>
                         <hr>
                       </li>
+                      <div class="nav-item">
+                        <a class="nav-link active" href="registration.html">بەشداربوون </a>
+                        <hr>
+                    </div>
                       <li class="nav-item">
                         <a class="nav-link active" aria-current="page" onclick="scrollToBottom()"  href="#bottom" >پەیوەندی کرن</a>
                         <hr>
@@ -111,7 +118,7 @@
                     <form class="d-flex ms-4 me-4 justify-content-end mt-3" role="search">
                     <div class="row gy-1">
                       <button class="btn navb_btn_2" type="submit"> <a class="nav-link" href="login.html">چوونا ژوور</a> </button>
-                      <button class="btn navb_btn_1" type="submit"> <a class="nav-link" href=" signup.html">خۆتوومارکرن </a></button>
+                      <button class="btn navb_btn_1" type="submit"> <a class="nav-link" href=" signup.html">خۆ توومارکرن </a></button>
                   </div>
                     </form>
                   </div>
@@ -138,7 +145,6 @@
       <p dir="auto" class="background_text">
           فێری زمانێ ئینگلیزی ببە ب ساناهیترین شێوە و بزانە کیش رێك و شێواز بو تە باشە و دگەل تە دگونجت دگەل مەدا. ماموستایێن تایبەت مە یێن هەین دشێن بو ماوەیەکێ درێژ دگەل تە بن و هاریکار بن و بەرێخودانێ ل ئاریشا تە بکن و چارەکن!  و هەروەسا تو دشێی د خولێن مە یێن (VIP) دا بەشدار بی هەرگاڤا تە بڤێت.    
       </p>
-      <a href="#" class="showcase_btn btn">پتر بزانە</a>
   </div>
   
 </div>
