--- a/courses.html
+++ b/courses.html
@@ -26,15 +26,18 @@
 <div class="thewholenav container-fluid fixed-top">
   <div class=" row  justify-content-center align-items-center">
     <div class="col-4 text-start ">
-      <div class="col  ">
+      <div class="col">
         <a href="index.html"><img id="Top" class="img"  src="/images/4.png" alt=""></a> 
       </div>
     </div>
-    <div class="col ">
-      <div class="d-none d-lg-flex row p-0 row-cols text-center align-items-center justify-content-center">
+    <div class="col">
+      <div class="navbar_width d-none d-lg-flex row p-0 row-cols text-center align-items-center justify-content-center">
           <div class="navbar_underline col p-0">
               <a class="navbar_links nav-link" onclick="scrollToBottom()"  href="#bottom" >پەیوەندی</a>
-          </div>
+            </div>
+            <div class="navbar_underline col p-0">
+                <a class="navbar_links nav-link" href="registration.html">بەشداربوون </a>
+            </div>
           <div class="navbar_underline col p-0">
               <a class="navbar_links nav-link" href="courses.html">خولێن بەردەست</a>
           </div>
@@ -45,7 +48,7 @@
               <a class="navbar_links nav-link" href="index.html">دەستپێك</a>
           </div>
           <div class="col p-0">
-            <button class="navb_btn_1 btn " type="submit"> <a class="nav-link" href="signup.html"> خۆتوومارکرن</a></button>
+            <button class="navb_btn_1 btn " type="submit"> <a class="nav-link" href="signup.html"> خۆ توومارکرن</a></button>
           </div>
           <div class="col p-0">
               <button class="navb_btn_2 btn " type="submit"> <a class="nav-link" href="login.html">چوونا ژوور </a></button>
@@ -97,6 +100,10 @@
                         <a class="nav-link active" aria-current="page" href="courses.html">خولێن بەردەست</a>
                         <hr>
                       </li>
+                      <div class="nav-item">
+                        <a class="nav-link active" href="registration.html">بەشداربوون </a>
+                        <hr>
+                    </div>
                       <li class="nav-item">
                         <a class="nav-link active" aria-current="page" onclick="scrollToBottom()"  href="#bottom" >پەیوەندی کرن</a>
                         <hr>
@@ -108,7 +115,7 @@
                     <form class="d-flex ms-4 me-4 justify-content-end mt-3" role="search">
                     <div class="row gy-1">
                       <button class="btn navb_btn_2" type="submit"> <a class="nav-link" href="login.html">چوونا ژوور</a> </button>
-                      <button class="btn navb_btn_1" type="submit"> <a class="nav-link" href=" signup.html">خۆتوومارکرن </a></button>
+                      <button class="btn navb_btn_1" type="submit"> <a class="nav-link" href=" signup.html">خۆ توومارکرن </a></button>
                   </div>
                     </form>
                   </div>
@@ -135,7 +142,6 @@
       <p dir="auto" class="background_text">
           فێری زمانێ ئینگلیزی ببە ب ساناهیترین شێوە و بزانە کیش رێك و شێواز بو تە باشە و دگەل تە دگونجت دگەل مەدا. ماموستایێن تایبەت مە یێن هەین دشێن بو ماوەیەکێ درێژ دگەل تە بن و هاریکار بن و بەرێخودانێ ل ئاریشا تە بکن و چارەکن!  و هەروەسا تو دشێی د خولێن مە یێن (VIP) دا بەشدار بی هەرگاڤا تە بڤێت.    
       </p>
-      <a href="#" class="showcase_btn btn">پتر بزانە</a>
   </div>
   
 </div>
@@ -163,9 +169,8 @@
     <h1 class="numbers rounded-circle ">1</h1>
 
       <div class="boxes">
-        <h1 class="tittle_text">Learn English with Grammar</h1>
-        <p class="paragraph">Teacher will teach you English with Grammar Structures
-          and using the right Coursebook to help you understand </p>
+        <h1 class="tittle_text">فێری زمانێ ئینگلیزی ببە <span class="text-warning">بێ رێزمان</span></h1>
+        <p dir="rtl" class="paragraph">د ڤێ جورێ خولێ دا ماموستا دێ پتر پاشتراستیێ ل هندێ کت کو فێرخواز باخڤت و ب هویربینی رێزمانێ شلوڤەناکت!</p>
       </div>
   </div>
 </div>
@@ -174,11 +179,10 @@
   <div class="row">
     <h1 class="numbers rounded-circle">2</h1>
 
-<div class="boxes">
-  <h1 class="tittle_text">Learn English with Grammar</h1>
-  <p class="paragraph">Teacher will teach you English with Grammar Structures
-    and using the right Coursebook to help you understand </p>
-</div>
+    <div class="boxes">
+      <h1 class="tittle_text">فێری زمانێ ئینگلیزی ب رێکا <span class="text-warning">ب کارئینانا رێزمانێ</span></h1>
+      <p dir="rtl" class="paragraph">دڤێ خولێدا ماموستا دێ پشتراستیێ ل فێرخوازی کت کو فێری زمانێ ببت و دگەل دا رێزمانێ ژی ب هویربینی بزانت!</p>
+    </div>
   </div>
 </div>
 <!-- number 3 -->
@@ -186,11 +190,10 @@
   <div class="row">
     <h1 class="numbers rounded-circle">3</h1>
 
-<div class="boxes">
-  <h1 class="tittle_text">Learn English with Grammar</h1>
-  <p class="paragraph">Teacher will teach you English with Grammar Structures
-    and using the right Coursebook to help you understand </p>
-</div>
+    <div class="boxes">
+      <h1 dir="rtl" class="tittle_text">خولا ڤەکری <span class="text-warning">بو فێرخوازێن (VIP)</span></h1>
+      <p dir="rtl" class="paragraph">د ڤێ جورێ  خولێدا ماموستا دێ ل دیف حەزا تە و ب بوارێ تەڤە گرێدای دێ تە فێرکەت و پەیڤ و رستان بوتە دابینکەت</p>
+    </div>
   </div>
 </div>
 <!-- number 4 -->
@@ -198,11 +201,10 @@
   <div class="row">
     <h1 class="numbers rounded-circle">4</h1>
 
-<div class="boxes">
-  <h1 class="tittle_text">Learn English with Grammar</h1>
-  <p class="paragraph">Teacher will teach you English with Grammar Structures
-    and using the right Coursebook to help you understand </p>
-</div>
+    <div class="boxes">
+      <h1 class="tittle_text">فێربوون <span class="text-warning">ب رێکا پەیڤان</span></h1>
+      <p dir="rtl" class="paragraph">د ڤێ جورێ خولێدا دێ ماموستاپتر پاشتراستیێ ل پەیڤان کەت و پشتی فێرخواز ڤێ خولێ ب دووماهی بینت دێ گەنجینەکا مەزن هەبت ژ پەیڤان!</p>
+    </div>
   </div>
 </div>
 <!-- number 5 -->
@@ -210,11 +212,10 @@
   <div class="row">
     <h1 class="numbers rounded-circle">5</h1>
 
-<div class="boxes">
-  <h1 class="tittle_text">Learn English with Grammar</h1>
-  <p class="paragraph">Teacher will teach you English with Grammar Structures
-    and using the right Coursebook to help you understand </p>
-</div>
+    <div class="boxes">
+      <h1 class="tittle_text">فێری زمانێ ئینگلیزی  ببە <span class="text-warning">ب رێکا وێنان</span></h1>
+      <p dir="rtl" class="paragraph">د ڤێ جورێ خولێدا دێ فێرخواز فێری گەلەک پەیڤ و رستان بیت بەلێ هەمی ب شێوێ وێنەی، ئانکو هەرتشتەک دڤێ خولێدا دێ ب وێنەی ئێتە رونکرن!</p>
+    </div>
   </div>
 </div>
 
