--- a/registration.html
+++ b/registration.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>test</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+
     <link rel="stylesheet" href="/css/index/0general.css">
     <link rel="stylesheet" href="/css/index/1navbar.css">
+    <link rel="stylesheet" href="/css/index/3below_background_boxes.css">
     <link rel="stylesheet" href="/css/index/2showcase.css">
     <link rel="stylesheet" href="/css/index/4paragraph.css">
     <link rel="stylesheet" href="/css/index/5shape&boxes.css">
@@ -20,7 +22,22 @@
     <link rel="stylesheet" href="/css/michael_card.css">
     <link rel="stylesheet" href="/css/signup.css">
     <link rel="stylesheet" href="/css/teachers.css">
+
     </head>
+
+
+    <style>
+    .msg_ {
+        border: 3px solid black;
+        border-radius: 30px;
+        padding: 50px;
+        margin: 80px;
+        text-align: center;
+        background-color: red;
+        color: white;
+    }
+    </style>
+
 <body>
 <!-- navbar -->
 <div class="thewholenav container-fluid fixed-top">
@@ -129,29 +146,29 @@
 </div>
 <!-- showcase -->
 <div>
-<img src="/images/backgroundhome.png" class="card-img d-none d-lg-block " alt="...">
-<img src="/images/ipad.png" class="card-img  d-md-block d-lg-none" alt="">
-<div class="below_navbar_text p-5 card-img-overlay container-fluid ">
-<div class="row justify-content-center  justify-content-lg-end">
-  <div class="col-10 col-sm-10 col-md-10  col-lg-8 col-xl-8  col-xxl-8 text-center text-lg-end">
-      <h1>
-          <div class="Tittle_showcase">
-            <span dir="auto">خولێن زمانێ ئینگلیزی یێن     <span class="text-warning"> پەیڤین   (Zoom)</span></span>
-          </div>
-      </h1>
-      <p dir="auto" class="background_text">
-          فێری زمانێ ئینگلیزی ببە ب ساناهیترین شێوە و بزانە کیش رێك و شێواز بو تە باشە و دگەل تە دگونجت دگەل مەدا. ماموستایێن تایبەت مە یێن هەین دشێن بو ماوەیەکێ درێژ دگەل تە بن و هاریکار بن و بەرێخودانێ ل ئاریشا تە بکن و چارەکن!  و هەروەسا تو دشێی د خولێن مە یێن (VIP) دا بەشدار بی هەرگاڤا تە بڤێت.    
-      </p>
-  </div>
-  
-</div>
+  <img src="/images/backgroundhome.png" class="card-img d-none d-lg-block " alt="...">
+  <img src="/images/ipad.png" class="card-img  d-md-block d-lg-none" alt="">
+  <div class="below_navbar_text p-5 card-img-overlay container-fluid ">
+    <div class="row justify-content-center  justify-content-lg-end">
+        <div class="col-10 col-sm-10 col-md-10  col-lg-8 col-xl-8  col-xxl-8 text-center text-lg-end">
+            <h1>
+                <div class="Tittle_showcase">
+                  <span dir="auto">خولێن زمانێ ئینگلیزی یێن     <span class="text-warning"> پەیڤین   (Zoom)</span></span>
+                </div>
+            </h1>
+            <p dir="auto" class="background_text">
+                فێری زمانێ ئینگلیزی ببە ب ساناهیترین شێوە و بزانە کیش رێك و شێواز بو تە باشە و دگەل تە دگونجت دگەل مەدا. ماموستایێن تایبەت مە یێن هەین دشێن بو ماوەیەکێ درێژ دگەل تە بن و هاریکار بن و بەرێخودانێ ل ئاریشا تە بکن و چارەکن!  و هەروەسا تو دشێی د خولێن مە یێن (VIP) دا بەشدار بی هەرگاڤا تە بڤێت.    
+            </p>
+        </div>
+        
+    </div>
 </div>
 
 </div>
 <!-- return_button -->
 <div class="container">
     <div class="div_ row">
-    <button class="return_button"> <a class="nav-link" href="teachers.html">&#8592; </a></button>
+    <button class="return_button"> <a class="nav-link" href="index.html">&#8592; </a></button>
 
     </div>
 </div>
@@ -161,34 +178,9 @@
 
 
 
-<!-- jagar card -->
-
-<div class="the_cards container ">
-    <div class="row">
-        <div class="text-center">
-           <div>
-            <img class="imag_cards_size img-fluid" src="/images/3jagar.png" alt="">
-           </div>
-
-            <div class="card_texts text-center">
-                <h1 class="tittle_card">ماموستا جەگەر</h1>
-                <p class="paragraph_card">تودشێ نوکە فێرببی دگەل <span class="fw-bold text-warning">ماموستا جەگەری   </span>و پتر پێزانینا وەرگری ب سەحکرنا ڤیدیویا ل خوارێ</p>
-                <button class="btn">
-                  <a class="btn_ nav-link" href="#">
-                    ڤیدیویا ماموستای
-                  </a>
-              </button>
-            </div>
-        </div>
-    </div>
-</div>
-
-
-
-
-
-
-
+<h1 class="msg_">
+    ل ڤێرێ دێ فورمەک ئێتە دانان کو قوتابی ل دەیف دلێ خو خولێ ژێ بگرت!
+</h1>
 
 
 
@@ -202,48 +194,58 @@
 
 <!-- footer -->
 <div class="fluid text-center">
-  <a onclick="scrollToTop()"  href="#top"> <img     class="logo_footer img-fluid" src="/images/4.png" alt=""></a>
-  <div class="user-select-none text-dark">
-    Copy Right &copy; Ahmed Avdal Shereef
+    <a onclick="scrollToTop()"  href="#top"> <img     class="logo_footer img-fluid" src="/images/4.png" alt=""></a>
+    <div class="user-select-none text-dark">
+      Copy Right &copy; Ahmed Avdal Shereef
+    </div>
+  <div id="bottom" class="title_footer text-dark fw-bold mb-3">
+    بو پتر پێزانینان پەیوەندیێ ب مە بکە
   </div>
-<div id="bottom" class="title_footer text-dark fw-bold mb-3">
-  بو پتر پێزانینان پەیوەندیێ ب مە بکە
-</div>
-
-
-
-<div class="background_footer text-light d-lg-flex p-2">
-  <div class="col p-2"> <a class="nav-link" href="mailto:peyvinesl@gmail.com">Gmail: peyvinesl@gmail.com</a></div>
-  <div class="col p-2"><a class="nav-link" href="https://wa.me/9647508230170">Phone: +964 0750 823 0170</a></div>
-  <div class="col p-2"><a class="nav-link" href="https://www.instagram.com/peyvin_courses?igshid=OGQ5ZDc2ODk2ZA==">Instagram: @peyvin_courses </a></div>
-</div>
-</div>
-
-
-
-<script>
-  function scrollToBottom() {
-    // Get the element with the id "bottom"
-    var element = document.getElementById("image");
-
-    // Scroll to the element's position
-    element.scrollIntoView({ behavior: "linear" });
-  }
-</script>
-
-<script>
-  function scrollToTop() {
-    // Get the element with the id "bottom"
-    var element = document.getElementById("top");
-
-    // Scroll to the element's position
-    element.scrollIntoView({ behavior: "linear" });
-  }
-</script>
-
-
-
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>  
-</body>
-</html>
+  
+  
+  
+  <div class="background_footer text-light d-lg-flex p-2">
+    <div class="col p-2"> <a class="nav-link" href="mailto:peyvinesl@gmail.com">Gmail: peyvinesl@gmail.com</a></div>
+    <div class="col p-2"><a class="nav-link" href="https://wa.me/9647508230170">Phone: +964 0750 823 0170</a></div>
+    <div class="col p-2"><a class="nav-link" href="https://www.instagram.com/peyvin_courses?igshid=OGQ5ZDc2ODk2ZA==">Instagram: @peyvin_courses </a></div>
+  </div>
+  </div>
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  <script>
+    function scrollToBottom() {
+      // Get the element with the id "bottom"
+      var element = document.getElementById("image");
+  
+      // Scroll to the element's position
+      element.scrollIntoView({ behavior: "linear" });
+    }
+  </script>
+  
+  <script>
+    function scrollToTop() {
+      // Get the element with the id "bottom"
+      var element = document.getElementById("top");
+  
+      // Scroll to the element's position
+      element.scrollIntoView({ behavior: "linear" });
+    }
+  </script>
+  
+  
+  
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>  
+  </body>
+  </html>
+  
