--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
   </h1>
 <div class=" d-flex align-items-center justify-content-center">
 <div dir="rtl" class="below_body_paragraph">
-  <div class="div ">&check; مە پتر ژ ٨٠٠ قوتابیان هەنە </div>
+  <div class="div ">&check; پتر ژ ٦٠٠ قوتابیان مفا ژ خولێن وەرگرتییە</div>
   <div class="div ">&check; باوەرناما باوەرپێکری </div>
   <div class="div ">&check; هاتینە پشتراستکرن ژلایێ CDC ڤە </div>
   <div class="div ">&check; فێربە ب رێکێن پێشکەفتی</div>
