--- a/teachers.html
+++ b/teachers.html
@@ -166,7 +166,7 @@
 
             <div class="card_div text-center">
                 <h1 class="tittle_card">ماموستا احمد</h1>
-                <p class="paragraph_card">تودشێ نوکە فێرببی دگەل <span class="fw-bold">ماموستا احمدی</span> و پتر پێزانینا وەرگری </p>
+                <p class="paragraph_card">تودشێ نوکە فێرببی دگەل <span class="fw-bold text-warning">ماموستا احمدی</span> و پتر پێزانینا وەرگری </p>
                 <button class="btn">
                     <a class="btn_ nav-link" href="ahmed.html">
                         پتر بزانە
@@ -185,7 +185,7 @@
 
             <div class="card_div text-center">
                 <h1 class="tittle_card">ماموستا مایکل</h1>
-                <p class="paragraph_card">تودشێ نوکە فێرببی دگەل <span class="fw-bold">ماموستا مایکلی</span> و پتر پێزانینا وەرگری </p>
+                <p class="paragraph_card">تودشێ نوکە فێرببی دگەل <span class="fw-bold text-warning">ماموستا مایکلی</span> و پتر پێزانینا وەرگری </p>
                 <button class="btn">
                     <a class="btn_ nav-link" href="michael.html">
                         پتر بزانە
@@ -204,7 +204,7 @@
 
             <div class="card_div text-center">
                 <h1 class="tittle_card">ماموستا جەگەرخوین</h1>
-                <p class="paragraph_card">تودشێ نوکە فێرببی دگەل <span class="fw-bold">ماموستا جەگەرخوینی</span> و پتر پێزانینا وەرگری </p>
+                <p class="paragraph_card">تودشێ نوکە فێرببی دگەل <span class="fw-bold text-warning">ماموستا جەگەرخوینی</span> و پتر پێزانینا وەرگری </p>
                 <button class="btn">
                     <a class="btn_ nav-link" href="jagar.html">
                         پتر بزانە
